2004-03-12  Ravindra <rkumar@novell.com>

	* TestSystemBrushes.cs: Added.

2004-03-17  Ravindra <rkumar@novell.com>
	* TestHatchBrush.cs: Added.

2004-01-26  Ravindra <rkumar@novell.com>
	* TestPointF.cs: Added.
	* TestSize.cs: Added.
	* TestSizeF: Added.

2004-01-16  Ravindra <rkumar@novell.com>
	* BmpPaint.cs   did not run on .NET.
	Modified to make it run on .NET. Specs say
	"Do not save an image to the same stream
	that was used to construct the image."

2003-07-30  Alexandre Pigolkine <pigolkine@gmx.de>
	* BmpPaint.cs 	modified

2003-06-28  Alexandre Pigolkine <pigolkine@gmx.de>
	* hering.cs 	save as Jpeg also

2003-06-22  Alexandre Pigolkine <pigolkine@gmx.de>
	* font1.cs added

2003-06-17  Alexandre Pigolkine <pigolkine@gmx.de>
	* hering.cs 	added
	
2003-06-15  Alexandre Pigolkine <pigolkine@gmx.de>
	* BmpPaint.cs 	ImageFormat specified for Save()
	* image1.cs		added

2003-06-06  Alexandre Pigolkine <pigolkine@gmx.de>
	* BmpPaint.cs 	added

2001-10-31  Mike Kestner <mkestner@speakeasy.net>

	* TestPoint.cs : Tests I've had in my node forever.
