@@ -30,18 +30,21 @@ namespace MonoTests.System.Drawing
 
 			try {
 				brush.Color = Color.Red;
+				Fail ("P1#3: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P1#3", e is ArgumentException);
 			}
 
 			try {
 				brush.Color = SystemColors.ActiveBorder;
+				Fail ("P1#4: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P1#4", e is ArgumentException);
 			}
 
 			try {
 				brush.Dispose();
+				Fail ("P1#5: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P1#5", e is ArgumentException);
 			}
@@ -57,18 +60,21 @@ namespace MonoTests.System.Drawing
 
 			try {
 				brush.Color = Color.Red;
+				Fail ("P2#3: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P2#3", e is ArgumentException);
 			}
 
 			try {
 				brush.Color = SystemColors.ActiveCaption;
+				Fail ("P2#4: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P2#4", e is ArgumentException);
 			}
 
 			try {
 				brush.Dispose();
+				Fail ("P2#5: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P2#5", e is ArgumentException);
 			}
@@ -85,18 +91,21 @@ namespace MonoTests.System.Drawing
 
 			try {
 				brush.Color = Color.Red;
+				Fail ("P3#3: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P3#3", e is ArgumentException);
 			}
 
 			try {
 				brush.Color = SystemColors.ActiveCaptionText;
+				Fail ("P3#4: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P3#4", e is ArgumentException);
 			}
 
 			try {
 				brush.Dispose();
+				Fail ("P3#5: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P3#5", e is ArgumentException);
 			}
@@ -112,18 +121,21 @@ namespace MonoTests.System.Drawing
 
 			try {
 				brush.Color = Color.Red;
+				Fail ("P4#3: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P4#3", e is ArgumentException);
 			}
 
 			try {
 				brush.Color = SystemColors.AppWorkspace;
+				Fail ("P4#4: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P4#4", e is ArgumentException);
 			}
 
 			try {
 				brush.Dispose();
+				Fail ("P4#5: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P4#5", e is ArgumentException);
 			}
@@ -139,18 +151,21 @@ namespace MonoTests.System.Drawing
 
 			try {
 				brush.Color = Color.Red;
+				Fail ("P5#3: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P5#3", e is ArgumentException);
 			}
 
 			try {
 				brush.Color = SystemColors.Control;
+				Fail ("P5#4: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P5#4", e is ArgumentException);
 			}
 
 			try {
 				brush.Dispose();
+				Fail ("P5#5: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P5#5", e is ArgumentException);
 			}
@@ -167,18 +182,21 @@ namespace MonoTests.System.Drawing
 
 			try {
 				brush.Color = Color.Red;
+				Fail ("P6#3: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P6#3", e is ArgumentException);
 			}
 
 			try {
 				brush.Color = SystemColors.ControlDark;
+				Fail ("P6#4: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P6#4", e is ArgumentException);
 			}
 
 			try {
 				brush.Dispose();
+				Fail ("P6#5: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P6#5", e is ArgumentException);
 			}
@@ -194,18 +212,21 @@ namespace MonoTests.System.Drawing
 
 			try {
 				brush.Color = Color.Red;
+				Fail ("P7#3: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P7#3", e is ArgumentException);
 			}
 
 			try {
 				brush.Color = SystemColors.ControlDarkDark;
+				Fail ("P7#4: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P7#4", e is ArgumentException);
 			}
 
 			try {
 				brush.Dispose();
+				Fail ("P7#5: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P7#5", e is ArgumentException);
 			}
@@ -221,18 +242,21 @@ namespace MonoTests.System.Drawing
 
 			try {
 				brush.Color = Color.Red;
+				Fail ("P8#3: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P8#3", e is ArgumentException);
 			}
 
 			try {
 				brush.Color = SystemColors.ControlLight;
+				Fail ("P8#4: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P8#4", e is ArgumentException);
 			}
 
 			try {
 				brush.Dispose();
+				Fail ("P8#5: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P8#5", e is ArgumentException);
 			}
@@ -248,18 +272,21 @@ namespace MonoTests.System.Drawing
 
 			try {
 				brush.Color = Color.Red;
+				Fail ("P9#3: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P9#3", e is ArgumentException);
 			}
 
 			try {
 				brush.Color = SystemColors.ControlLightLight;
+				Fail ("P9#4: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P9#4", e is ArgumentException);
 			}
 
 			try {
 				brush.Dispose();
+				Fail ("P9#5: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P9#5", e is ArgumentException);
 			}
@@ -275,18 +302,21 @@ namespace MonoTests.System.Drawing
 
 			try {
 				brush.Color = Color.Red;
+				Fail ("P10#3: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P10#3", e is ArgumentException);
 			}
 
 			try {
 				brush.Color = SystemColors.ControlText;
+				Fail ("P10#4: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P10#4", e is ArgumentException);
 			}
 
 			try {
 				brush.Dispose();
+				Fail ("P10#5: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P10#5", e is ArgumentException);
 			}
@@ -303,18 +333,21 @@ namespace MonoTests.System.Drawing
 
 			try {
 				brush.Color = Color.Red;
+				Fail ("P11#3: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P11#3", e is ArgumentException);
 			}
 
 			try {
 				brush.Color = SystemColors.Desktop;
+				Fail ("P11#4: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P11#4", e is ArgumentException);
 			}
 
 			try {
 				brush.Dispose();
+				Fail ("P11#5: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P11#5", e is ArgumentException);
 			}
@@ -330,18 +363,21 @@ namespace MonoTests.System.Drawing
 
 			try {
 				brush.Color = Color.Red;
+				Fail ("P12#3: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P12#3", e is ArgumentException);
 			}
 
 			try {
 				brush.Color = SystemColors.Highlight;
+				Fail ("P12#4: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P12#4", e is ArgumentException);
 			}
 
 			try {
 				brush.Dispose();
+				Fail ("P12#5: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P12#5", e is ArgumentException);
 			}
@@ -357,18 +393,21 @@ namespace MonoTests.System.Drawing
 
 			try {
 				brush.Color = Color.Red;
+				Fail ("P13#3: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P13#3", e is ArgumentException);
 			}
 
 			try {
 				brush.Color = SystemColors.HighlightText;
+				Fail ("P13#4: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P13#4", e is ArgumentException);
 			}
 
 			try {
 				brush.Dispose();
+				Fail ("P13#5: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P13#5", e is ArgumentException);
 			}
@@ -384,18 +423,21 @@ namespace MonoTests.System.Drawing
 
 			try {
 				brush.Color = Color.Red;
+				Fail ("P14#3: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P14#3", e is ArgumentException);
 			}
 
 			try {
 				brush.Color = SystemColors.HotTrack;
+				Fail ("P14#4: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P14#4", e is ArgumentException);
 			}
 
 			try {
 				brush.Dispose();
+				Fail ("P14#5: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P14#5", e is ArgumentException);
 			}
@@ -411,18 +453,21 @@ namespace MonoTests.System.Drawing
 
 			try {
 				brush.Color = Color.Red;
+				Fail ("P15#3: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P15#3", e is ArgumentException);
 			}
 
 			try {
 				brush.Color = SystemColors.InactiveBorder;
+				Fail ("P15#4: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P15#4", e is ArgumentException);
 			}
 
 			try {
 				brush.Dispose();
+				Fail ("P15#5: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P15#5", e is ArgumentException);
 			}
@@ -438,18 +483,21 @@ namespace MonoTests.System.Drawing
 
 			try {
 				brush.Color = Color.Red;
+				Fail ("P16#3: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P16#3", e is ArgumentException);
 			}
 
 			try {
 				brush.Color = SystemColors.InactiveCaption;
+				Fail ("P16#4: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P16#4", e is ArgumentException);
 			}
 
 			try {
 				brush.Dispose();
+				Fail ("P16#5: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P16#5", e is ArgumentException);
 			}
@@ -465,18 +513,21 @@ namespace MonoTests.System.Drawing
 
 			try {
 				brush.Color = Color.Red;
+				Fail ("P17#3: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P17#3", e is ArgumentException);
 			}
 
 			try {
 				brush.Color = SystemColors.Info;
+				Fail ("P17#4: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P17#4", e is ArgumentException);
 			}
 
 			try {
 				brush.Dispose();
+				Fail ("P17#5: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P17#5", e is ArgumentException);
 			}
@@ -492,18 +543,21 @@ namespace MonoTests.System.Drawing
 
 			try {
 				brush.Color = Color.Red;
+				Fail ("P18#3: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P18#3", e is ArgumentException);
 			}
 
 			try {
 				brush.Color = SystemColors.Menu;
+				Fail ("P18#4: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P18#4", e is ArgumentException);
 			}
 
 			try {
 				brush.Dispose();
+				Fail ("P18#5: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P18#5", e is ArgumentException);
 			}
@@ -519,18 +573,21 @@ namespace MonoTests.System.Drawing
 
 			try {
 				brush.Color = Color.Red;
+				Fail ("P19#3: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P19#3", e is ArgumentException);
 			}
 
 			try {
 				brush.Color = SystemColors.ScrollBar;
+				Fail ("P19#4: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P19#4", e is ArgumentException);
 			}
 
 			try {
 				brush.Dispose();
+				Fail ("P19#5: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P19#5", e is ArgumentException);
 			}
@@ -546,18 +603,21 @@ namespace MonoTests.System.Drawing
 
 			try {
 				brush.Color = Color.Red;
+				Fail ("P20#3: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P20#3", e is ArgumentException);
 			}
 
 			try {
 				brush.Color = SystemColors.Window;
+				Fail ("P20#4: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P20#4", e is ArgumentException);
 			}
 
 			try {
 				brush.Dispose();
+				Fail ("P20#5: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P20#5", e is ArgumentException);
 			}
@@ -573,18 +633,21 @@ namespace MonoTests.System.Drawing
 
 			try {
 				brush.Color = Color.Red;
+				Fail ("P21#3: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P21#3", e is ArgumentException);
 			}
 
 			try {
 				brush.Color = SystemColors.WindowText;
+				Fail ("P21#4: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P21#4", e is ArgumentException);
 			}
 
 			try {
 				brush.Dispose();
+				Fail ("P21#5: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("P21#5", e is ArgumentException);
 			}
@@ -600,18 +663,21 @@ namespace MonoTests.System.Drawing
 
 			try {
 				brush.Color = Color.Red;
+				Fail ("M1#2: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("M1#2", e is ArgumentException);
 			}
 
 			try {
 				brush.Color = SystemColors.Menu;
+				Fail ("M1#3: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("M1#3", e is ArgumentException);
 			}
 
 			try {
 				brush.Dispose();
+				Fail ("M1#4: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("M1#4", e is ArgumentException);
 			}
@@ -619,6 +685,7 @@ namespace MonoTests.System.Drawing
 
 			try {
 				brush = (SolidBrush) SystemBrushes.FromSystemColor (Color.Red);
+				Fail ("M2#1: must throw ArgumentException");
 			} catch (Exception e) {
 				Assert ("M2#1", e is ArgumentException);
 			}
